Bookmarks alignment fix

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: 0px 0px 0px 36px;
+    padding: 0px 0px 0px 40px;
 }
 
 li {
